// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error Snapshot Testing. Throws error: Coordinate latitude must be a number between -90 and 90 1`] = `
"[2mexpect([22m[31m[longitude, latitude][39m[2m).isValid2DCoordinate()[22m

Coordinate latitude must be a number between -90 and 90.

Received:  [31m[0, 100][39m"
`;

exports[`Error Snapshot Testing. Throws error: Coordinate longitude must be a number between -180 and 180 1`] = `
"[2mexpect([22m[31m[longitude, latitude][39m[2m).isValid2DCoordinate()[22m

Coordinate longitude must be a number between -180 and 180.

Received:  [31m[-256, 0][39m"
`;

exports[`Error Snapshot Testing. Throws error: Coordinate must be an array of only two elments 1`] = `
"[2mexpect([22m[31m[longitude, latitude][39m[2m).isValid2DCoordinate()[22m

Coordinate must be an array of only two elments.

Received:  [31m[0, 0, 733][39m"
`;

exports[`Error Snapshot Testing. Throws error: Invalid input to matcher 1`] = `
"[2mexpect([22m[31m[longitude, latitude][39m[2m).isValid2DCoordinate()[22m

Coordinate must be an array of only two elments.

Received:  [31mfalse[39m"
`;

exports[`Error Snapshot Testing. Throws error: Valid use case passes 1`] = `
"[2mexpect([22m[31m[longitude, latitude][39m[2m).not.isValid2DCoordinate()[22m

Expected input to not be a two element array with longitude between (-90 to 90),
        and latitude between (-180 to 180).

Received:  [31m[0, 0][39m"
`;
